--- a/app/src/main/res/layout/activity_git_hub_user_details.xml
+++ b/app/src/main/res/layout/activity_git_hub_user_details.xml
@@ -125,7 +125,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:textSize="35sp"
-        android:text="NO REPOS FOUND!"
+        android:text="@string/no_repos_found"
+        android:gravity="center"
         android:textStyle="bold"
         android:textColor="#AAFF0000"
         app:layout_constraintTop_toBottomOf="@id/activity_git_hub_user_details_search_bar"
