--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#AA778899">
 
   <androidx.appcompat.widget.SearchView
       android:layout_width="match_parent"
@@ -14,7 +15,8 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:iconifiedByDefault="false"
       app:queryHint="Search Github Users by name"
-      android:id="@+id/activity_main_sv_users"/>
+      android:id="@+id/activity_main_sv_users"
+      android:background="@color/white"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
