--- a/app/src/main/res/layout/github_user_layout.xml
+++ b/app/src/main/res/layout/github_user_layout.xml
@@ -6,13 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
-    android:layout_marginTop="8dp"
-    android:elevation="8dp"
+    android:layout_marginBottom="1dp"
+    android:elevation="15dp"
+    android:background="@color/white"
    >
 
     <ImageView
         android:id="@+id/github_user_layout_user_image"
-        android:layout_width="100dp"
+        android:layout_width="80dp"
         android:layout_height="70dp"
         tools:layout_editor_absoluteX="93dp"
         tools:layout_editor_absoluteY="16dp"
